--- a/info.plist
+++ b/info.plist
@@ -14,6 +14,8 @@
 		<array>
 			<string>BF303CAC-FF2B-4299-8F2B-C84FE64B5146</string>
 			<string>C7B74C19-5DB5-47A1-A148-3A1019EF4D96</string>
+			<string>1E29CA7D-E299-445A-8280-A90048A3AF7A</string>
+			<string>9D79F5B0-97A3-476F-8248-65033FC238C3</string>
 			<string>------------------------------------</string>
 			<string>E2D1F434-A472-4185-9933-4D9408C6C4D0</string>
 			<string>------------------------------------</string>
@@ -29,18 +31,35 @@
 			<string>2052FA2D-5830-4665-8C90-01D0C7E04991</string>
 			<string>8E68AA99-64F4-4D36-AF80-D7D0B3DCD041</string>
 			<string>------------------------------------</string>
-			<string>1E29CA7D-E299-445A-8280-A90048A3AF7A</string>
-			<string>9D79F5B0-97A3-476F-8248-65033FC238C3</string>
+			<string>2335CA29-CE33-4E13-82DB-E95723EA803B</string>
 			<string>------------------------------------</string>
 			<string>CC332FA5-9CD7-441D-A3A7-D971F9F94D6C</string>
 			<string>EDAEDD4D-4670-4F19-825D-7AAC5DA1B9B2</string>
-			<string>------------------------------------</string>
-			<string>67FE994B-F16C-4AE7-8C41-E0F334C29511</string>
-			<string>FB7436CF-5DAB-4CAE-9DA8-6D575EBD0BA1</string>
-			<string>16C91E96-32A4-4C0A-B05D-AAB42C0B8B61</string>
 		</array>
 		<key>submenus</key>
-		<dict/>
+		<dict>
+			<key>2335CA29-CE33-4E13-82DB-E95723EA803B</key>
+			<dict>
+				<key>items</key>
+				<array>
+					<string>38E6ACD8-4C39-420A-9B28-6C6E5FC74DFC</string>
+					<string>FB7436CF-5DAB-4CAE-9DA8-6D575EBD0BA1</string>
+					<string>E542001E-75CF-41C6-B81A-B3A1D74C68F8</string>
+					<string>0371F2C9-2404-47B2-8E76-581D6F7BAA1A</string>
+					<string>6AB3D6B1-9E03-42B2-BD73-265BC4CF6148</string>
+					<string>F07EA27E-1FE9-449C-B188-BFC39494BEBB</string>
+					<string>66C774E7-25C0-4BBC-A17A-B4B46F0C2CB5</string>
+					<string>16C91E96-32A4-4C0A-B05D-AAB42C0B8B61</string>
+					<string>64497AE2-C357-48E1-9D50-687C777E53BB</string>
+					<string>50B7296F-2B98-4D2F-86AA-A87AF4145827</string>
+					<string>D055C8D6-BE90-44DD-BD55-F534D751A124</string>
+					<string>304E3A6D-DD7B-406D-BE49-52F67DF0A03E</string>
+					<string>67FE994B-F16C-4AE7-8C41-E0F334C29511</string>
+				</array>
+				<key>name</key>
+				<string>Love Callbacks</string>
+			</dict>
+		</dict>
 	</dict>
 	<key>name</key>
 	<string>Lua</string>
@@ -68,6 +87,17 @@
 		<string>411468A8-E0AC-415A-9E71-E2BD091EB571</string>
 		<string>16C91E96-32A4-4C0A-B05D-AAB42C0B8B61</string>
 		<string>FB7436CF-5DAB-4CAE-9DA8-6D575EBD0BA1</string>
+		<string>38E6ACD8-4C39-420A-9B28-6C6E5FC74DFC</string>
+		<string>DE775353-9B18-4A11-86DB-7A9394551E8E</string>
+		<string>304E3A6D-DD7B-406D-BE49-52F67DF0A03E</string>
+		<string>D055C8D6-BE90-44DD-BD55-F534D751A124</string>
+		<string>E542001E-75CF-41C6-B81A-B3A1D74C68F8</string>
+		<string>0371F2C9-2404-47B2-8E76-581D6F7BAA1A</string>
+		<string>6AB3D6B1-9E03-42B2-BD73-265BC4CF6148</string>
+		<string>F07EA27E-1FE9-449C-B188-BFC39494BEBB</string>
+		<string>66C774E7-25C0-4BBC-A17A-B4B46F0C2CB5</string>
+		<string>64497AE2-C357-48E1-9D50-687C777E53BB</string>
+		<string>50B7296F-2B98-4D2F-86AA-A87AF4145827</string>
 	</array>
 	<key>uuid</key>
 	<string>5217EA86-3153-4568-B5FD-05917BCE46B3</string>
