Done a bit of work.

--- a/info.plist
+++ b/info.plist
@@ -89,6 +89,7 @@
 		<string>FB7436CF-5DAB-4CAE-9DA8-6D575EBD0BA1</string>
 		<string>38E6ACD8-4C39-420A-9B28-6C6E5FC74DFC</string>
 		<string>DE775353-9B18-4A11-86DB-7A9394551E8E</string>
+		<string>1CEE6A06-291F-4446-892E-E40D1E33B256</string>
 		<string>304E3A6D-DD7B-406D-BE49-52F67DF0A03E</string>
 		<string>D055C8D6-BE90-44DD-BD55-F534D751A124</string>
 		<string>E542001E-75CF-41C6-B81A-B3A1D74C68F8</string>
@@ -98,6 +99,7 @@
 		<string>66C774E7-25C0-4BBC-A17A-B4B46F0C2CB5</string>
 		<string>64497AE2-C357-48E1-9D50-687C777E53BB</string>
 		<string>50B7296F-2B98-4D2F-86AA-A87AF4145827</string>
+		<string>50C5B18C-0E63-4C00-9F8E-275FABF6986C</string>
 	</array>
 	<key>uuid</key>
 	<string>5217EA86-3153-4568-B5FD-05917BCE46B3</string>
